--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "type": "module",
   "dependencies": {
+    "express": "^4.18.2",
     "puppeteer": "^24.15.0"
+  },
+  "scripts": {
+    "start": "node pdf.js"
   }
 }
