--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "type": "module",
   "dependencies": {
     "express": "^5.1.0",
-    "puppeteer": "^24.15.0"
+    "puppeteer-core": "^24.15.0",
+    "@sparticuz/chromium": "^122.0.0"
   },
   "scripts": {
-    "postinstall": "puppeteer install",
     "start": "node pdf.js"
   }
 }
